fix: penyelesaian revisi tugas 2 dan pemisahan route tugas 3
